2013-07-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/compact-results.py,
	* support/regression/collate-results.py: Also look for "unknown
	   instruction"
	* sim/ucsim/st7.src/st7.cc,
	* sim/ucsim/hc08.src/hc08.cc,
	* sim/ucsim/hc08.src/inst.cc: Change result code for invalid and
	  incomplete instructions so regression tests scripts detect problem.

2013-07-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/stm8.src/stm8.cc: Change result code for invalid and
	  incomplete instructions so regression tests scripts detect problem.

2013-07-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCerr.c:
	  Change message text for warning on variables being dead at their definitions.

2013-07-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp:
	  Fix lospre forwarding.

2013-07-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCBBlock.c,
	  src/SDCClrange.c,
	  src/SDCClrange.h,
	  src/SDCCopt.c,
	  src/SDCCralloc.hpp,
	  src/*/ralloc.c:
	  Split non-connected live-ranges.

2013-07-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCset.h,
	  src/SDCCset.c:
	  Improve const use in sets.
	* src/SDCCglobl.h,
	  src/SDCCBBlock.c,
	  src/SDCCopt.c:
      Allow debug iCode dump after lospre.

2013-07-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCbitv.h,
	  src/SDCCbitv.c:
	  Improve const use in bit vectors.

2013-07-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp:
	  Fix invalidation in lospre forwarding.

2013-07-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc:
	  Mark receive opcodes as invalidating for losrpe.

2013-06-30 Philipp Klaus Krause <pkk AT spth.de>

	* sdccconf_in.h:
	  Regenerated to make --disable-stm8-port work.

2013-06-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.cc:
	  Disable safety in division for stm8.

2013-06-27 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCnaddr.hpp: